# telethon_asyncpg

./: .gitignore  LICENSE  README.rst  pyproject.toml
examples/: good_practise.py
telethon_asyncpg/: __init__.py  _patch.py
telethon_asyncpg/client/: auth.py  downloads.py  telegrambaseclient.py  updates.py  users.py
telethon_asyncpg/network/: mtprotosender.py
telethon_asyncpg/sessions/: __init__.py  abstract.py  asyncpg.py  base.py
tests/: conftest.py  test__patch.py  test_version.py
